# stt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  justfile  kernel.config  ktstr.kconfig  rust-toolchain.toml  stt.kconfig  test-config.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pages.yml
cargo-ktstr/: Cargo.toml
cargo-ktstr/src/: fetch.rs  lib.rs  main.rs  remote_cache.rs
cargo-stt/: Cargo.toml
cargo-stt/src/: main.rs
doc/guide/: book.toml
doc/guide/src/: ci.md  (+12 more)
ktstr-macros/: Cargo.toml  build.rs
ktstr-macros/src/: kernel_path.rs  lib.rs
proptest-regressions/: stats.txt
scx-ktstr/: Cargo.toml  build.rs
scx-ktstr-macros/: Cargo.toml
scx-ktstr-macros/src/: lib.rs
scx-ktstr-sched/: Cargo.toml
scx-ktstr-sched/src/: main.rs
scx-ktstr-sched/src/bpf/: main.bpf.c
scx-ktstr/src/: main.rs  stats.rs
scx-ktstr/src/bpf/: main.bpf.c
src/: assert.rs  bpf_skel.rs  budget.rs  cache.rs  cgroup.rs  cli.rs  cpu_util.rs  ctprof.rs  ctprof_compare.rs  elf_strip.rs  export.rs  fetch.rs  flock.rs  fun.rs  host_context.rs  host_heap.rs  host_state.rs  host_state_compare.rs  host_thread_probe.rs  kernel_path.rs  lib.rs  main.rs  metric_types.rs  remote_cache.rs  report.rs  runner.rs  stats.rs  sync.rs  tar_util.rs  taskstats.rs  test_macros.rs  test_support.rs  timeline.rs  topology.rs  verifier.rs  verify.rs  vm.rs  worker_ready.rs  worker_ready_wait.rs  workload.rs
src/assert/: claim.rs  mod.rs  temporal.rs  tests_assert.rs  tests_benchmarks.rs  tests_common.rs  tests_merge.rs  tests_note.rs  tests_numa.rs  tests_percentile.rs  tests_plan.rs  tests_sched_died.rs  tests_serde.rs  tests_stats.rs  tests_verdict.rs  tests_worker.rs
src/bpf/: fentry_probe.bpf.c  intf.h  probe.bpf.c  vmlinux_gen.c
src/cache/: cache_dir.rs  cache_dir_tests.rs  housekeeping.rs  metadata.rs  mod.rs  resolve.rs  shared_test_helpers.rs  vmlinux_strip.rs
src/cli/: kernel_cmd.rs  kernel_list.rs  locks.rs  mod.rs  parse.rs  resolve.rs  testing.rs  util.rs
src/ctprof/: mod.rs  parse.rs  tests.rs  tests_capture.rs  tests_cgroup.rs  tests_helpers.rs  tests_parse.rs  tests_parse_summary.rs  tests_probe.rs  tests_snapshot.rs  tests_thread_state.rs
src/ctprof_compare/: aggregate.rs  cgroup_merge.rs  columns.rs  compare.rs  diff_types.rs  groups.rs  metrics.rs  mod.rs  options.rs  pattern.rs  render.rs  report.rs  runner.rs  scale.rs  tests_aggregate.rs  tests_cgroup_merge.rs  tests_columns.rs  tests_compare.rs  tests_diff_types.rs  tests_fixtures.rs  tests_groups.rs  tests_metrics.rs  tests_metrics2.rs  tests_options.rs  tests_pattern.rs  tests_render.rs  tests_report.rs  tests_runner.rs  tests_scale.rs
src/monitor/: arena.rs  bpf_map.rs  bpf_prog.rs  bpf_syscall.rs  btf_offsets.rs  btf_render.rs  cast_analysis.rs  debug_capture.rs  dmesg_scx.rs  dump.rs  guest.rs  idr.rs  live_host_kernel.rs  mod.rs  perf_counters.rs  reader.rs  reproducer_gen.rs  runnable_scan.rs  scx_static_alloc.rs  scx_walker.rs  sdt_alloc.rs  symbols.rs  task_enrichment.rs  test_util.rs  tests.rs  timeline.rs
src/probe/: btf.rs  decode.rs  mod.rs  output.rs  process.rs  scx_defs.rs  stack.rs
src/scenario/: affinity.rs  backdrop.rs  basic.rs  catalog.rs  cpuset.rs  dynamic.rs  interaction.rs  mod.rs  nested.rs  ops.rs  payload_run.rs  performance.rs  sample.rs  scenarios.rs  snapshot.rs  stress.rs
src/snapshots/: ktstr__verifier__tests__snapshot_format_brief_line.snap  ktstr__verifier__tests__snapshot_format_brief_line_long_name.snap  ktstr__verifier__tests__snapshot_format_brief_line_zero.snap  ktstr__verifier__tests__snapshot_format_verifier_diff.snap  ktstr__verifier__tests__snapshot_format_verifier_diff_missing_program.snap  ktstr__verifier__tests__snapshot_format_verifier_output_no_log.snap  ktstr__verifier__tests__snapshot_format_verifier_output_with_log.snap
src/test_support/: args.rs  dispatch.rs  entry.rs  eval.rs  fixtures.rs  metrics.rs  mod.rs  model.rs  output.rs  payload.rs  probe.rs  probe_metrics.rs  profraw.rs  runtime.rs  sidecar.rs  test_helpers.rs  timefmt.rs  topo.rs
src/vmm/: acpi.rs  boot.rs  builder.rs  bulk.rs  capture_numa.rs  capture_scx.rs  capture_tasks.rs  cast_analysis_load.rs  cgroup_sandbox.rs  console.rs  contention.rs  disk_config.rs  disk_template.rs  exit_dispatch.rs  freeze_coord.rs  guest_comms.rs  host_comms.rs  host_topology.rs  initramfs.rs  initramfs_cache.rs  kvm.rs  kvm_stats.rs  memory_budget.rs  mod.rs  mptable.rs  net_config.rs  numa_mem.rs  pi_mutex.rs  result.rs  rust_init.rs  sched_stats.rs  setup.rs  shm_ring.rs  terminal.rs  topology.rs  vcpu.rs  vcpu_panic.rs  virtio_blk.rs  virtio_console.rs  vmlinux.rs  (+1 more)
src/workload/: affinity.rs  config.rs  mod.rs  types.rs
stt-macros/: Cargo.toml
stt-macros/src/: lib.rs
stt-sched/: Cargo.toml
stt-sched/src/: main.rs
stt-sched/src/bpf/: main.bpf.c
tests/: assert_gate_matrix.rs  cargo_ktstr_cli.rs  cast_analysis_e2e.rs  cgroup_parent_multilevel.rs  compile_fail.rs  config_file_def_e2e.rs  ctprof_capture.rs  ctprof_capture_jemalloc_e2e.rs  ctprof_capture_jemalloc_wiring.rs  ctprof_compare.rs  ctprof_kconfig_capture.rs  ctprof_pipeline_e2e.rs  ctprof_show.rs  declare_scheduler.rs  derive_payload_tests.rs  derive_scheduler_payload_wrapper_tests.rs  disk_template_e2e.rs  distributed_slice_registration.rs  eevdf_tests.rs  extra_kconfig_e2e.rs  failure_dump_e2e.rs  guest_pmu_e2e.rs  host_state_capture.rs  host_state_capture_jemalloc_e2e.rs  host_state_capture_jemalloc_wiring.rs  host_state_compare.rs  host_state_kconfig_capture.rs  host_state_pipeline_e2e.rs  host_state_show.rs  jemalloc_alloc_worker_exit_codes.rs  jemalloc_probe_helpers_test.rs  jemalloc_probe_signals_test.rs  jemalloc_probe_tests.rs  ktstr_cli.rs  ktstr_sched_tests.rs  ktstr_test_macro.rs  ldd_pin.rs  live_host_inside_vm.rs  live_host_pipeline_e2e.rs  llm_extract_e2e_test.rs  (+25 more)
tests/common/: ctprof.rs  dump_paths.rs  fixtures.rs  host_state.rs  mod.rs
tests/compile_fail/: declare_scheduler_all_three_binaries.rs  declare_scheduler_all_three_binaries.stderr  (+346 more)
(+168 files in other folders)
